--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
