--- a/apps/adsb/tsconfig.json
+++ b/apps/adsb/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
+    "target": "es2017",
     "lib": ["ES2022"],
-    "module": "CommonJS",
+    "module": "ES2022",
     "outDir": "./dist",
     "rootDir": "./src",
     "downlevelIteration": true
