--- a/turbo.json
+++ b/turbo.json
@@ -32,5 +32,5 @@
     }
   },
   "globalDependencies": [".env", "turbo.json"],
-  "globalEnv": ["GITHUB_TOKEN", "DB_HOST"]
+  "globalEnv": ["GITHUB_TOKEN", "DB_HOST", "GOOGLE_API_KEY"]
 }
