feat(adsb): interactive services and parsers

--- a/apps/db/Dockerfile
+++ b/apps/db/Dockerfile
@@ -2,20 +2,18 @@ FROM mcr.microsoft.com/mssql/server
 
 USER root
 
-RUN apt-get update && apt-get install cron -y
+RUN apt-get update && apt-get -y --no-install-recommends install curl software-properties-common gnupg2
+
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
+
+RUN add-apt-repository "$(wget -qO- https://packages.microsoft.com/config/ubuntu/16.04/prod.list)" && apt-get update && apt-get install mssql-tools cron -y
 
 WORKDIR /usr/bin
-
-COPY apps/db/wait-for-it.sh /usr/bin/wait-for-it
-
-RUN chmod +x /usr/bin/wait-for-it
 
 COPY apps/db/restore.sh /usr/bin/restore
 
 RUN chmod +x /usr/bin/restore
 
-RUN crontab -l | { cat; echo "0 7 * * * restore"; } | crontab -
-
 USER mssql
 
-ENTRYPOINT /opt/mssql/bin/sqlservr
+CMD /opt/mssql/bin/sqlservr
