--- a/apps/adsb/package.json
+++ b/apps/adsb/package.json
@@ -33,6 +33,8 @@
     "@turf/turf": "^6.5.0",
     "axios": "^1.6.0",
     "database": "*",
+    "prettier": "^2.8.3",
+    "turbo": "^1.7.0",
     "xmlbuilder2": "^3.0.2"
   }
 }
