--- a/apps/adsb/package.json
+++ b/apps/adsb/package.json
@@ -34,6 +34,7 @@
     "axios": "^1.6.0",
     "database": "*",
     "prettier": "^2.8.3",
+    "supertest": "^7.0.0",
     "turbo": "^1.7.0",
     "xmlbuilder2": "^3.0.2"
   }
