--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,13 +14,14 @@
     "preset": "jest-presets/jest/node"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
+    "@sendgrid/mail": "^8.1.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "logger": "^0.0.1",
     "morgan": "^1.10.0",
-    "mssql": "^7.2.0"
+    "mssql": "^10.0.2",
+    "supertest": "^7.0.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
