--- a/apps/receiver/package.json
+++ b/apps/receiver/package.json
@@ -19,8 +19,9 @@
     "axios": "^1.6.0",
     "logger": "*",
     "morgan": "^1.10.0",
-    "mssql": "^7.2.0",
+    "mssql": "^10.0.2",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^7.0.0",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
