chore(deps): update package dependencies across multiple apps and packages
- Bumped various dependencies in package.json files for apps (adsb, api, receiver, tools, web) and packages (database, eslint-config-custom, jest-presets, logger, ui).
- Updated versions for TypeScript, ESLint, Jest, and other libraries to their latest compatible versions.
- Removed outdated dependencies and ensured consistency across the project.

Notable updates include:
- Turbo updated to 2.5.0
- Axios updated to 1.8.4
- Express updated to 5.1.0
- Next.js updated to 15.2.4
- ESLint and Jest updated to 9.24.0 and 29.7.0 respectively.

This update enhances compatibility and performance across the codebase.

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,9 +9,9 @@
     "db:pull": "prisma db pull"
   },
   "dependencies": {
-    "@prisma/client": "latest"
+    "@prisma/client": "6.5.0"
   },
   "devDependencies": {
-    "prisma": "latest"
+    "prisma": "6.5.0"
   }
 }
