--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -4,10 +4,10 @@
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
-    "eslint-config-next": "^12.0.8",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-react": "7.28.0",
-    "eslint-config-turbo": "latest"
+    "eslint-config-next": "^15.2.4",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-config-turbo": "2.5.0",
+    "eslint-plugin-react": "7.37.5"
   },
   "publishConfig": {
     "access": "public"
